--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Auth
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:sqlserver://20.54.237.62:1433;databaseName=Auth
+spring.datasource.username=sa
+spring.datasource.password=1JPYgNLVMUq99WpPzyL35Nag4z5gMTgWhKmkaBdxFC6YdEHAedP!$
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.show-sql=true
 
 spring.application.name=authMicroservice
 server.port = 9003
 server.error.path=/error
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://10.0.28.155:8761/eureka
 
 security.jwt.token.secret-key=klsadjfvksdkjlfhsa;kjvjkajshfeasd548f46asd51v5as4df532as1d53f4asdf3
 # valid for 2 hours
