--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<properties>
+		  <sonar.organization>ellazuid-github</sonar.organization>
+		  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		</properties>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
