--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,5 +19,6 @@ jobs:
           java-version: 11
       - name: Maven Package
         run: mvn -B clean package -DskipTests
-      - name: Maven Verify
-        run: mvn -B clean verify -Pintegration-test
+      - name: Test with Maven
+        run: mvn -B test --file pom.xml
+
