--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Test with Maven
-        run: mvn -B test --file AuthControllerTest
+        run: mvn -B test --file pom.xml
 
