--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: 11
       - name: Maven Package
-        run: mvn -B clean package -DskipTests
+        run: mvn -B clean package
       - name: Test with Maven
         run: mvn -B test --file pom.xml
 
