--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -10,15 +10,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
+      - name: Check out code
+        uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-      - name: Test with Maven
-        run: mvn -B test --file pom.xml
+      - name: Set up node
+        uses: actions/setup-node@v1
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
 
